sort.baseball.SelectBaseball.scala.error
Compilation error:
SelectBaseball:19: error: not found: value k
            deplacerJoueur(k, nCouleur, 1);
                           ^